--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ build-backend = "poetry.core.masonry.api"
 
 [[tool.poetry.packages]]
 include = "utils"
+
+[[tool.poetry.packages]]
+include = "schemas"
